# MACROSes_and_PREPROCESSOR

./: CMakeLists.txt  main.cpp  task_1.cpp  task_2.cpp  task_3.cpp
headers/: days_of_the_week.h  trains_and_wagons.h
